5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3555/executions/1643_2443.log
== SUBMITION (2019-04-08 18:29:29) 
-- CODE:
from math import*

r = float(input())
a = float(input())
n = int(input())

va = (4*(pi)*(r**3))/3
vc = ((pi)*(a**2)*(3*r-a))/3

if(n == 1):
	print(va)
else:
	print(vc)
-- EXECUTION TIME:
0.153932
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
179.5943800302165
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
19.998331635201428
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:29:31) 
-- CODE:
from math import*

r = float(input())
a = float(input())
n = int(input())

va = (4*(pi)*(r**3))/3
vc = ((pi)*(a**2)*(3*r-a))/3

if(n == 1):
	print(va)
else:
	print(vc)
-- OUTPUT:
179.5943800302165
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:30:34) 
-- CODE:
from math import*

r = float(input())
a = float(input())
n = int(input())

va = (4*(pi)*(r**3))/3
vc = ((pi)*(a**2)*(3*r-a))/3

if(n == 1):
	print(va)
else if(n == 2):
	print(vc)
-- EXECUTION TIME:
0.272476
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 12
    else if(n == 2):
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:31:04) 
-- CODE:
from math import*

r = float(input())
a = float(input())
n = int(input())

va = (4*(pi)*(r**3))/3
vc = ((pi)*(a**2)*(3*r-a))/3

if(n == 1):
	print(round(va,4))
else if(n == 2):
	print(round(vc,4))
-- EXECUTION TIME:
0.134371
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 12
    else if(n == 2):
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:31:29) 
-- CODE:
from math import*

r = float(input())
a = float(input())
n = int(input())

va = (4*(pi)*(r**3))/3
vc = ((pi)*(a**2)*(3*r-a))/3

if(n == 1):
	print(round(va,4))
else if(n == 2):
	print(round(vc,4))
-- ERROR:
File "XXXX", line 12
    else if(n == 2):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:31:39) 
-- CODE:
from math import*

r = float(input())
a = float(input())
n = int(input())

va = (4*(pi)*(r**3))/3
vc = ((pi)*(a**2)*(3*r-a))/3

if(n == 1):
	print(round(va,4))
if(n == 2):
	print(round(vc,4))
-- EXECUTION TIME:
0.121952
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
179.5944
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
19.9983
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:31:41) 
-- CODE:
from math import*

r = float(input())
a = float(input())
n = int(input())

va = (4*(pi)*(r**3))/3
vc = ((pi)*(a**2)*(3*r-a))/3

if(n == 1):
	print(round(va,4))
if(n == 2):
	print(round(vc,4))
-- OUTPUT:
179.5944
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:32:25) 
-- CODE:
from math import*

r = float(input())
a = float(input())
n = int(input())

va = (4*(pi)*(r**3))/3
vc = ((pi)*(a**2)*(3*r-a))/3

if(n == 1):
	print(round(vc,4))
if(n == 2):
	print(round(va,4))
-- EXECUTION TIME:
0.126239
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
310.3391
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:32:27) 
-- CODE:
from math import*

r = float(input())
a = float(input())
n = int(input())

va = (4*(pi)*(r**3))/3
vc = ((pi)*(a**2)*(3*r-a))/3

if(n == 1):
	print(round(vc,4))
if(n == 2):
	print(round(va,4))
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:33:13) 
-- CODE:
from math import*

r = float(input())
a = float(input())
n = int(input())

va = (4*(pi)*(r**3))/3
vc = ((pi)*(a**2)*(3*r-a))/3

if(n == 1):
	print(round(vc,4))
if(n == 2):
	print(round(va,4))
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:33:32) 
-- CODE:
from math import*

r = float(input())
a = float(input())
n = int(input())

va = (4*(pi)*(r**3))/3
vc = ((pi)*(a**2)*(3*r-a))/3

if(n == 1):
	print(round(vc,4))
if(n == 2):
	print(round(va,5))
-- EXECUTION TIME:
0.143634
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
310.33909
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:33:34) 
-- CODE:
from math import*

r = float(input())
a = float(input())
n = int(input())

va = (4*(pi)*(r**3))/3
vc = ((pi)*(a**2)*(3*r-a))/3

if(n == 1):
	print(round(vc,4))
if(n == 2):
	print(round(va,5))
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:34:34) 
-- CODE:
from math import*

r = float(input())
a = float(input())
n = int(input())

va = (4*(pi)*(r**3))/3
vc = ((pi)*(a**2)*(3*r-a))/3
com= vc - va
if(n == 1):
	print(round(com,4))
if(n == 2):
	print(round(va,5))
-- EXECUTION TIME:
0.19692
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
-170.5687
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
310.33909
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:34:41) 
-- CODE:
from math import*

r = float(input())
a = float(input())
n = int(input())

va = (4*(pi)*(r**3))/3
vc = ((pi)*(a**2)*(3*r-a))/3
com= vc - va
if(n == 1):
	print(round(com,4))
if(n == 2):
	print(round(va,4))
-- OUTPUT:
-170.5687
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:35:07) 
-- CODE:
from math import*

r = float(input())
a = float(input())
n = int(input())

va = (4*(pi)*(r**3))/3
vc = ((pi)*(a**2)*(3*r-a))/3
com= vc - va
if(n == 1):
	print(round(vc,4))
if(n == 2):
	print(round(com,4))
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:35:25) 
-- CODE:
from math import*

r = float(input())
a = float(input())
n = int(input())

va = (4*(pi)*(r**3))/3
vc = ((pi)*(a**2)*(3*r-a))/3
com= va-vc
if(n == 1):
	print(round(vc,4))
if(n == 2):
	print(round(com,4))
-- EXECUTION TIME:
0.16884
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
